# mcp-server-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  uv.toml
.claude/transcripts/1baac63e-e8a8-43a9-88f6-89bd44a704d5/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html  page-011.html  page-012.html  page-013.html  page-014.html  page-015.html
.claude/transcripts/21893a05-e2be-40db-8e93-81968fa9324d/: 21893a05-e2be-40db-8e93-81968fa9324d.jsonl  index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html
.claude/transcripts/ee81e75f-526c-4abc-acb2-379f09482c29/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html
.github/: dependabot.yml  zizmor.yml
.github/workflows/: charm.yaml  pages.yaml  publish-charmlib.yaml  workload.yaml  zizmor.yaml
charm/: charmcraft.yaml  pyproject.toml  tox.ini
charm/lib/charms/haproxy/v1/: haproxy_route.py
charm/src/: charm.py  mcp_server.py  slo_specs.yaml  workload_server.py
charm/src/grafana_dashboards/: mcp-server.json
charm/src/loki_alert_rules/: mcp-server.yaml
charm/src/prometheus_alert_rules/: mcp-server.yaml
charm/tests/integration/: conftest.py  test_charm.py
charm/tests/unit/: test_charm.py  test_mcp_server.py
charmlib/: README.md  pyproject.toml
charmlib/src/charmlibs/interfaces/mcp/: __init__.py  _models.py  _provider.py  _requirer.py
charmlib/src/charmlibs/mcp/: __init__.py  _models.py  _provider.py
charmlib/tests/: test_models.py  test_provider_requirer.py
demo/: README.md
demo/postgresql/: README.md  charmcraft.yaml  pyproject.toml
demo/postgresql/src/: charm.py
demo/principal/: charmcraft.yaml  pyproject.toml  tox.ini
demo/principal/src/: charm.py
docs/: explanation.md  integration-schema.md  tutorial.md
docs/how-to/: add-tools.md  configure-auth.md  configure-ingress.md  configure-observability.md  configure-tls.md
docs/reference/: api.md  config.md
workload/: pyproject.toml
workload/src/: __init__.py  server.py  token_verifier.py
workload/tests/: test_integration.py  test_server.py  test_token_verifier.py
